syntax = "proto3";
package cz.cvut.fel.dsva.grpc;
option java_multiple_files = true;
import public "google/protobuf/empty.proto";
service JuliaSetCalculator {
  rpc requestCalculation (BatchCalculationRequest) returns (RequestCalculationRequestResult) {}
  rpc requestNewWork (NewWorkRequest) returns (BatchCalculationRequest) {}
  rpc submitRequestedWork(BatchCalculationResult) returns (google.protobuf.Empty) {}
}
service WorkStationManagement{
  rpc join(WorkStation) returns (google.protobuf.Empty){}
  rpc leave(WorkStation) returns (google.protobuf.Empty) {}
}

enum RequestCalculationRequestResponseStatus{
  OK = 0;
  ALREADY_IN_COMPUTATION = 1;
}

message RequestCalculationRequestResult{
  RequestCalculationRequestResponseStatus status = 1;
  repeated Clock vectorClock = 2;
}


message BatchCalculationResult{
  repeated CalculationResult results = 1;
  WorkStation worker = 2;
  repeated Clock vectorClock = 3;
}
message BatchCalculationRequest{
  repeated CalculationRequest requests = 1;
  WorkStation requester = 2;
  repeated Clock vectorClock = 3;
}

message CalculationRequest {
  ImageProperties imageProperties = 1;
  JuliaSetProperties juliaSetProperties = 2;
}

message ImageProperties {
  uint32 id = 1;
  uint32 height = 2;
  uint32 width = 3;
}

message JuliaSetProperties {
  ComplexNumber offset = 1;
  ComplexNumber topRightCorner = 2;
  ComplexNumber bottomLeftCorner = 3;
  double escapeRadius = 4;
  uint32 maxIterations = 5;
}

message ComplexNumber{
  double real = 1;
  double imaginary = 2;
}

message CalculationResult{
  ImageProperties imageProperties = 1;
  bytes pixels = 2;
}


message WorkStation{
  string ip = 1;
  int32 port = 2;
}

message Clock{
  WorkStation station = 1;
  int64 timestamp = 2;
}

message NewWorkRequest{
  WorkStation station = 1;
  repeated Clock vectorClock = 2;
}